<resources>
    <string name="app_name">KAELA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="school">School</string>
    <string name="city">City</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="image">ImAGE</string>
    <string name="solution">Solution</string>
    <string name="add_image">Add Image</string>
    <string name="sol_image">sol_image</string>
    <string name="post_solution">Post Solution</string>
</resources>
